# local-agent

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE1_PLAN.md  PRD.md  README.md  SECURITY.md  SYSTEM_PROMPT.md  docker-compose.yml
.github/workflows/: desktop-package.yml  desktop-test.yml  ios-test.yml  prompt-eval-gate.yml  regression-gate.yml
android-app/: build.gradle.kts  gradle.properties  secrets.properties.example  settings.gradle.kts
android-app/androidApp/: build.gradle.kts  proguard-rules.pro
android-app/androidApp/src/debug/: AndroidManifest.xml
android-app/androidApp/src/main/: AndroidManifest.xml
android-app/androidApp/src/main/assets/: locations.json  preflight_config.json  search_defaults.json
android-app/androidApp/src/main/assets/i18n/: strings_es.json
android-app/androidApp/src/main/res/values/: strings.xml  themes.xml
android-app/androidApp/src/main/res/xml/: file_paths.xml  network_security_config.xml
android-app/desktopApp/: build.gradle.kts
android-app/desktopApp/icons/: generate_icons.py  icon.icns
android-app/desktopApp/packaging/: README.md  com.contextsolutions.localagent.plist  localagent.system.service  localagent.user.service
android-app/desktopHarness/: build.gradle.kts
android-app/docs/: JOBS_PLAN.md
android-app/gradle/: libs.versions.toml  verification-metadata.xml
android-app/iosApp/: README.md
android-app/iosApp/iosApp/: Info.plist  LiteRtBridge.swift  OnnxRuntimeBridge.swift  QRScannerBridge.swift  RelayBridge.swift  iOSApp.swift
android-app/iosApp/iosApp.xcodeproj/: project.pbxproj
android-app/iosApp/iosApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
android-app/iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
android-app/shared/: build.gradle.kts
android-app/shared/src/commonMain/sqldelight/databases/: 1.db  12.db  2.db  3.db  5.db  6.db  7.db  8.db
android-app/shared/src/desktopMain/resources/: locations.json  memory_config.json  system_memory_config.json
android-app/ui/: build.gradle.kts
classifier-training/: pyproject.toml
classifier-training/scripts/: export_minilm_litert.py  export_minilm_onnx.py
classifier-training/src/classifier_training/: __init__.py
classifier-training/src/classifier_training/training/: export_onnx.py
classifier-training/tests/fixtures/: classifier_onnx_canonical_outputs.json  embedder_canonical_outputs.json  embedder_onnx_canonical_outputs.json  minilm_tokenizer_canonical_inputs.json
docker/: entrypoint.sh
docs/: ANYWHERE_ACCESS_PLAN.md  BRAVE_SPIKE.md  BUILD.md  DATA_SAFETY_NOTES.md  DESKTOP_LLAMA_SERVER_PLAN.md  DESKTOP_PACKAGING.md  DESKTOP_PORT_PLAN.md  I18N_LOCALIZATION_PLAN.md  IOS_BUILD.md  JOBS_PLAN.md  M0_DECISION_MEMO.md  M5_M6_HANDOFF.md  M5_PLAN.md  M6_KICKOFF.md  M6_M7_HANDOFF.md  M6_PLAN.md  M7_KICKOFF.md  M7_PLAN.md  MACOS_BUILD.md  OLLAMA_REMOTE_LLM_PLAN.md  PHASE9_CONTINUATION_PROMPT.md  PRIVACY_POLICY.md  PRODUCTION_DESKTOP_RUNBOOK.md  PRODUCTION_RUNBOOK.md  SECURITY_AUDIT.md  SECURITY_FOLLOWUPS.md  SPIKE_RUNBOOK.md  THREAT_MODEL.md  USER_GUIDE.md  VOICE_IO.md  preflight_memory_shared_v1.0.0_MODEL_CARD.md
eval/canonical/: README.md
(+1151 files in other folders)
