[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classifier-training"
version = "0.1.0"
description = "Dataset construction and classifier fine-tuning for the mobile-agent on-device assistant."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Context Solutions" }]
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.7,<3",
    "jsonlines>=4.0,<5",
    "click>=8.1,<9",
    "jinja2>=3.1,<4",
    "tenacity>=8.2,<9",
    "rich>=13.7,<14",
    "python-dateutil>=2.9,<3",
    # Ollama-first synthetic generation (M3_PLAN.md §3 Phase A).
    "httpx>=0.27,<1",
    "ollama>=0.3,<1",
    # Local Textual review tool replaces Argilla per M3_PLAN.md §2.
    "textual>=0.79,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-python-dateutil",
]
claude = [
    # Optional Claude backend for synthetic generation. Only needed when
    # CT_GEN_BACKEND=claude. Default is ollama (free, local).
    "anthropic>=0.40,<1",
]
dedup = [
    # Sentence-Transformers for near-duplicate detection in M3_PLAN.md Phase B.
    "sentence-transformers>=3.0,<4",
]
training = [
    # Pulled in only when the training scripts are run; keeps the labeling/dataset
    # workflow lightweight to install on labeler machines.
    "torch>=2.3,<3",
    "transformers>=4.44,<5",
    "datasets>=2.20,<3",
    "accelerate>=0.34,<1",
    "evaluate>=0.4,<1",
    "scikit-learn>=1.5,<2",
    "onnx>=1.16,<2",
    "onnxruntime>=1.18,<2",
    "onnxscript>=0.1",  # torch>=2.x `torch.onnx.export` imports it unconditionally (ct-export-onnx)
    "ai-edge-torch>=0.2",  # LiteRT conversion (formerly TFLite)
]

[project.scripts]
ct-validate = "classifier_training.datasets.validate:main"
ct-generate-preflight = "classifier_training.generation.generate:preflight_cli"
ct-generate-memory = "classifier_training.generation.generate:memory_cli"
ct-fill = "classifier_training.generation.fill:main"
ct-expand-pairs = "classifier_training.generation.expand_pairs:main"
ct-stats = "classifier_training.datasets.stats:main"
ct-dedup = "classifier_training.datasets.dedup:main"
ct-review = "classifier_training.review.app:main"
ct-train-classifier = "classifier_training.training.train:main"
ct-eval-classifier = "classifier_training.training.eval:main"
ct-quantize = "classifier_training.training.quantize:main"
ct-export-litert = "classifier_training.training.export_litert:main"
ct-export-onnx = "classifier_training.training.export_onnx:main"
ct-bench-pixel7 = "classifier_training.training.benchmark_pixel7:main"
ct-regression-check = "classifier_training.ci.regression_check:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
